# DistroKid-Release-Packer

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  artist-defaults.example.json  codecov.yml  config.json  pack.js  pack.py  package.json  pyproject.toml  release.example.json  requirements.txt  ruff.toml  user_settings.example.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
Releases/example/Metadata/: YourArtistName - Example - Metadata.json
Releases/example/Stems/: YourArtistName - Example - Stems_Metadata.json
assets/screenshots/: config-viewer.html  error-panel.html  pack-dry-run.html  pack-workflow-start.html  pack-workflow-steps.html  pack-workflow-success.html  status-dashboard.html  system-check.html
configs/: config.json  user_settings.json
docs/: AUDIO_CLIPPING_GUIDE.md  AUTO_FIX_CLIPPING.md  CHANGELOG.md  CHECKLIST_COMPLIANCE.md  CHECKLIST_VALIDATION_COMPARISON.md  CODECOV_SETUP.md  CONTRIBUTING.md  COVER_ART_GUIDE.md  FEATURES_IMPLEMENTED.md  HOW_IT_WORKS.md  ID3_TAGGING_STANDARDS.md  IMPROVEMENTS_100.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_SETUP.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  USAGE_GUIDE.md  USER_SETTINGS_GUIDE.md  VALIDATION_COVERAGE.md  WORKFLOW.md
docs/development/: REFACTORING_SUMMARY.md  REMEDIATION_PLAN.md  REMEDIATION_TODOS.md
docs/reports/: PHASE_7_VALIDATION_REPORT.md  PRODUCTION_REVIEW.md  PRODUCTION_REVIEW_FINAL.md
schemas/: artist_defaults_schema.json  release_schema.json
scripts/: README.md  batch_processor.py  check_tags.py  cli.py  extract_suno_version.js  extract_suno_version.py  fix_clipping.py  generate_cli_screenshots.py  logger_config.py  orchestrator.js  orchestrator.py  organize_stems.js  organize_stems.py  pack.js  pack.py  rename_audio_files.js  rename_audio_files.py  retry_utils.py  rich_utils.py  tag_audio_id3.js  tag_audio_id3.py  tag_stems.js  tag_stems.py  validate_compliance.py  validate_config.py  validate_cover_art.py
scripts/commands/: __init__.py  batch.py  check.py  config.py  init.py  logs.py  pack.py  status.py  validate.py
tests/: __init__.py  conftest.py
tests/fixtures/: config_empty_title.json  config_invalid_bpm.json  config_invalid_tracknum.json  config_malformed.json  config_missing_artist.json  config_valid.json
tests/integration/: test_atomic_operations.py  test_concurrent_workflows.py  test_e2e_validation.py  test_full_workflow.py
tests/unit/: test_config_validation.py  test_error_handling.py  test_windows_paths.py
